--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -4,8 +4,8 @@ $font-family: "PT Sans", -apple-system, "Helvetica Neue", "Segoe UI", "Roboto", 
 $heading-weight: 600 !default
 $line-height: 1.6 !default
 $link-color: #68f !default
-$dark: #533747 !default //eggplant -changed by SG 2024/1/3
-$light: #EFE6DD !default //linen -changed by SG 2024/1/3
+$dark: #533747 !default 
+$light: #EFE6DD !default 
 
 @function reduce ($percent)
   @return rgba(mix($dark, $light), $percent / 100)
