--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -3,7 +3,7 @@ $font-weight: 400 !default
 $font-family: "PT Sans", -apple-system, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif !default
 $heading-weight: 600 !default
 $line-height: 1.6 !default
-$link-color: #68f !default
+$link-color: #DAA520 !default
 $dark: #561F37 !default 
 $light: #EFE6DD !default 
 
